--- a/index.html
+++ b/index.html
@@ -3,24 +3,27 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>LLM Generate & Evaluate</title>
+  <title>LLM Generate &amp; Evaluate</title>
   <!-- Bootstrap 5 CDN -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <style>
     body { background-color: #121212; color: #e0e0e0; }
     .card { background-color: #1e1e1e; border: none; border-radius: .5rem; }
     .form-control, .btn { border-radius: .375rem; }
-    .metrics-list { list-style: none; padding: 0; }
-    .metrics-list li { display: inline-block; margin-right: .5rem; }
-    .metrics-list li .badge { background-color: #333; }
-    pre { background-color: #1e1e1e; padding: 1rem; border-radius: .5rem; overflow-x: auto; }
+    .metrics-grid { display: grid; grid-template-columns: repeat(auto-fill, minmax(140px, 1fr)); gap: .75rem; }
+    .overlay { 
+      position: fixed; top: 0; left: 0; width: 100%; height: 100%; 
+      background: rgba(0,0,0,0.7); display: flex; align-items: center; justify-content: center;
+      color: #fff; font-size: 1.25rem; z-index: 1000; display: none;
+    }
   </style>
 </head>
 <body>
+  <div class="overlay" id="overlay">Generating…</div>
   <div class="container py-5">
-    <div class="text-center mb-4">
+    <div class="d-flex justify-content-between align-items-center mb-4">
       <h1 class="fw-bold">LLM Generate &amp; Evaluate</h1>
-      <small class="text-muted">Single-page interface</small>
+      <button id="toggle-theme" class="btn btn-outline-light btn-sm">Toggle Light</button>
     </div>
     <div class="card p-4 mx-auto" style="max-width: 800px;">
       <form id="auth-form" class="mb-4">
@@ -32,7 +35,7 @@
           <label class="form-label">Password</label>
           <input type="password" id="password" class="form-control bg-dark text-light" required>
         </div>
-        <button type="submit" class="btn btn-primary w-100">Login &amp; Generate</button>
+        <button type="submit" class="btn btn-primary w-100">Login &amp; Continue</button>
       </form>
       <div id="generator" style="display:none;">
         <div class="mb-3">
@@ -40,14 +43,11 @@
           <textarea id="prompt" rows="3" class="form-control bg-dark text-light" placeholder="Enter your prompt"></textarea>
         </div>
         <div class="mb-3">
-          <label class="form-label">Metrics</label>
-          <select multiple id="metrics" class="form-select bg-dark text-light">
-            <option value="helpfulness" selected>helpfulness</option>
-            <option value="toxicity" selected>toxicity</option>
-            <option value="relevance" selected>relevance</option>
-            <option value="coherence">coherence</option>
-            <option value="conciseness">conciseness</option>
-          </select>
+          <div class="d-flex justify-content-between align-items-center mb-2">
+            <label class="form-label mb-0">Select Metrics</label>
+            <button id="save-preset" class="btn btn-sm btn-outline-secondary">Save Preset</button>
+          </div>
+          <div id="metrics-container" class="metrics-grid bg-dark p-3 rounded"></div>
         </div>
         <button id="submit-btn" class="btn btn-success w-100">Generate &amp; Eval</button>
       </div>
@@ -55,64 +55,24 @@
         <h5>Response</h5>
         <pre id="response-text">...</pre>
         <h5>Evaluation Results</h5>
-        <ul id="eval-results" class="metrics-list"></ul>
+        <ul id="eval-results" class="list-unstyled"></ul>
       </div>
     </div>
   </div>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
   <script>
+    const apiBase = 'https://custom-metric-playground.vercel.app';
+    const overlay = document.getElementById('overlay');
     const authForm = document.getElementById('auth-form');
     const generator = document.getElementById('generator');
-    const output = document.getElementById('output');
-    const responseText = document.getElementById('response-text');
-    const evalResults = document.getElementById('eval-results');
+    const metricsContainer = document.getElementById('metrics-container');
+    const savePresetBtn = document.getElementById('save-preset');
+    const toggleThemeBtn = document.getElementById('toggle-theme');
     let credentials = null;
+    let presets = JSON.parse(localStorage.getItem('metricPreset')||'[]');
 
-    authForm.addEventListener('submit', e => {
-      e.preventDefault();
-      const user = document.getElementById('username').value;
-      const pass = document.getElementById('password').value;
-      credentials = btoa(`${user}:${pass}`);
-      authForm.style.display = 'none';
-      generator.style.display = 'block';
-    });
-
-    document.getElementById('submit-btn').addEventListener('click', async () => {
-      const prompt = document.getElementById('prompt').value.trim();
-      const metrics = Array.from(document.getElementById('metrics').selectedOptions).map(o=>o.value);
-      if (!prompt) return;
-
-      responseText.textContent = 'Loading...';
-      evalResults.innerHTML = '';
-      output.style.display = 'block';
-
-      try {
-        const res = await fetch('https://custom-metric-playground.vercel.app/v1/llm/generate_with_eval', {
-          method: 'POST',
-          headers: {
-            'Content-Type': 'application/json',
-            'Authorization': 'Basic ' + credentials
-          },
-          body: JSON.stringify({
-            messages: [{ role: 'user', content: prompt }],
-            model: 'sonar-pro',
-            eval_config: { enabled: true, metrics, wait_for_results: true }
-          })
-        });
-        if (!res.ok) throw new Error(res.statusText);
-        const data = await res.json();
-        responseText.textContent = data.response;
-        const results = data.evaluation?.results || {};
-        for (const [metric, result] of Object.entries(results)) {
-          const li = document.createElement('li');
-          li.innerHTML = `<span class="badge text-light">${metric}</span>: ${JSON.stringify(result)}`;
-          evalResults.appendChild(li);
-        }
-      } catch (err) {
-        responseText.textContent = 'Error: ' + err.message;
-      }
-    });
-  </script>
-</body>
-</html>
+    // Theme toggle
+    toggleThemeBtn.addEventListener('click',()=>{
+      const html = document.documentElement;
+      html.dataset.bsTheme = html.dataset.bsTheme==='light
