--- a/index.html
+++ b/index.html
@@ -3,166 +3,160 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>LLM Generate &amp; Evaluate</title>
-  <!-- Bootstrap 5 CDN -->
+  <title class="display-6">LLM Generate &amp; Evaluate</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <style>
-    body { background-color: #121212; color: #e0e0e0; }
-    .card { background-color: #1e1e1e; border: none; border-radius: .5rem; }
-    .form-control, .btn { border-radius: .375rem; }
-    .metrics-grid { display: grid; grid-template-columns: repeat(auto-fill, minmax(140px, 1fr)); gap: .75rem; }
-    .overlay { 
-      position: fixed; top: 0; left: 0; width: 100%; height: 100%; 
-      background: rgba(0,0,0,0.7); display: flex; align-items: center; justify-content: center;
-      color: #fff; font-size: 1.25rem; z-index: 1000; display: none;
-    }
+    body { transition: background-color .3s, color .3s; }
+    .dark { background-color: #121212; color: #e0e0e0; }
+    .light { background-color: #f8f9fa; color: #212529; }
+    .card { border: none; border-radius: .5rem; }
+    .metrics-grid { display: grid; grid-template-columns: repeat(auto-fill,minmax(140px,1fr)); gap:.75rem; }
+    .overlay { position:fixed; top:0;left:0;width:100%;height:100%; background:rgba(0,0,0,0.7);
+      color:#fff; display:flex; align-items:center;justify-content:center; font-size:1.5rem; z-index:1000; display:none; }
   </style>
 </head>
-<body>
+<body class="dark">
   <div class="overlay" id="overlay">Generating…</div>
   <div class="container py-5">
     <div class="d-flex justify-content-between align-items-center mb-4">
-      <h1 class="fw-bold">LLM Generate &amp; Evaluate</h1>
-      <button id="toggle-theme" class="btn btn-outline-light btn-sm">Toggle Light</button>
+      <h1 class="display-5">LLM Generate &amp; Evaluate</h1>
+      <div>
+        <button id="theme-btn" class="btn btn-outline-light btn-sm me-2">Light Mode</button>
+        <button id="edit-login" class="btn btn-outline-info btn-sm">Change Login</button>
+      </div>
     </div>
-    <div class="card p-4 mx-auto" style="max-width: 800px;">
+    <div class="card p-4 mx-auto" style="max-width:800px;">
       <form id="auth-form" class="mb-4">
+        <h2 class="h6 text-secondary">Login</h2>
         <div class="mb-3">
-          <label class="form-label">Username</label>
-          <input type="text" id="username" class="form-control bg-dark text-light" required>
+          <input type="text" id="username" class="form-control" placeholder="Username" required>
         </div>
         <div class="mb-3">
-          <label class="form-label">Password</label>
-          <input type="password" id="password" class="form-control bg-dark text-light" required>
+          <input type="password" id="password" class="form-control" placeholder="Password" required>
         </div>
         <button type="submit" class="btn btn-primary w-100">Login &amp; Continue</button>
       </form>
       <div id="generator" style="display:none;">
+        <h2 class="h6 text-secondary">Generate</h2>
         <div class="mb-3">
-          <label class="form-label">Prompt</label>
-          <textarea id="prompt" rows="3" class="form-control bg-dark text-light" placeholder="Enter your prompt"></textarea>
+          <textarea id="prompt" rows="3" class="form-control" placeholder="Enter prompt"></textarea>
         </div>
         <div class="mb-3">
-          <div class="d-flex justify-content-between align-items-center mb-2">
-            <label class="form-label mb-0">Select Metrics</label>
-            <button id="save-preset" class="btn btn-sm btn-outline-secondary">Save Preset</button>
-          </div>
-          <div id="metrics-container" class="metrics-grid bg-dark p-3 rounded"></div>
+          <label class="form-label text-secondary">Select Metrics</label>
+          <div id="metrics-container" class="metrics-grid"></div>
         </div>
         <button id="submit-btn" class="btn btn-success w-100">Generate &amp; Eval</button>
       </div>
       <div id="output" class="mt-4" style="display:none;">
-        <h5>Response</h5>
-        <pre id="response-text">...</pre>
-        <h5>Evaluation Results</h5>
+        <h2 class="h6 text-secondary">Response</h2>
+        <pre id="response-text" class="p-3 bg-light rounded"></pre>
+        <h2 class="h6 text-secondary mt-3">Results</h2>
         <ul id="eval-results" class="list-unstyled"></ul>
       </div>
+      <div id="error" class="alert alert-danger mt-3" style="display:none;"></div>
     </div>
   </div>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
   <script>
-    const apiBase = 'https://custom-metric-playground.vercel.app';
-    const overlay = document.getElementById('overlay');
-    const authForm = document.getElementById('auth-form');
-    const generator = document.getElementById('generator');
-    const metricsContainer = document.getElementById('metrics-container');
-    const savePresetBtn = document.getElementById('save-preset');
-    const toggleThemeBtn = document.getElementById('toggle-theme');
-    let credentials = null;
-    let presets = JSON.parse(localStorage.getItem('metricPreset')||'[]');
+    const themeBtn = document.getElementById('theme-btn'),
+          editLogin = document.getElementById('edit-login'),
+          authForm = document.getElementById('auth-form'),
+          generator = document.getElementById('generator'),
+          overlay = document.getElementById('overlay'),
+          errorBox = document.getElementById('error'),
+          responseText = document.getElementById('response-text'),
+          evalResults = document.getElementById('eval-results'),
+          output = document.getElementById('output'),
+          metricsContainer = document.getElementById('metrics-container');
 
-    // Theme toggle
-    toggleThemeBtn.addEventListener('click',()=>{
-      const html = document.documentElement;
-      html.dataset.bsTheme = html.dataset.bsTheme==='light'?'dark':'light';
-      toggleThemeBtn.textContent = html.dataset.bsTheme==='light'?'Toggle Dark':'Toggle Light';
-    });
-
-    // Load metrics dynamically
-    async function loadMetrics(){
-      try {
-        const res = await fetch(apiBase+'/v1/preset_metric/list',{
-          headers: { 'Authorization':'Basic '+credentials }
-        });
-        const data = await res.json();
-        metricsContainer.innerHTML='';
-        Object.keys(data.metrics).forEach(name=>{
-          const div = document.createElement('div');
-          div.innerHTML = `
-            <div class="form-check">
-              <input class="form-check-input" type="checkbox" value="${name}" id="m_${name}">
-              <label class="form-check-label text-light" for="m_${name}">${name}</label>
-            </div>`;
-          metricsContainer.append(div);
-        });
-        // apply saved preset
-        presets.forEach(name=>{
-          const cb = document.getElementById('m_'+name);
-          if(cb) cb.checked = true;
-        });
-      } catch(e){
-        console.error('Fetching metrics failed',e);
+    let credentials=null;
+    themeBtn.addEventListener('click',()=>{
+      const body=document.body;
+      if(body.classList.toggle('light')){
+        body.classList.remove('dark');
+        themeBtn.textContent='Dark Mode';
+      } else {
+        body.classList.add('dark');
+        themeBtn.textContent='Light Mode';
       }
-    }
-
-    // Save current selection as preset
-    savePresetBtn.addEventListener('click',e=>{
-      e.preventDefault();
-      presets = Array.from(metricsContainer.querySelectorAll('input:checked')).map(i=>i.value);
-      localStorage.setItem('metricPreset', JSON.stringify(presets));
-      savePresetBtn.textContent='Preset Saved!';
-      setTimeout(()=> savePresetBtn.textContent='Save Preset',1500);
+    });
+    editLogin.addEventListener('click',()=>{
+      generator.style.display='none';
+      authForm.style.display='block';
     });
 
-    // Auth form
-    authForm.addEventListener('submit',async e=>{
+    authForm.addEventListener('submit', async e=>{
       e.preventDefault();
-      const user = document.getElementById('username').value;
-      const pass = document.getElementById('password').value;
-      credentials = btoa(`${user}:${pass}`);
-      // preload metrics
-      await loadMetrics();
+      credentials=btoa(`${username.value}:${password.value}`);
       authForm.style.display='none';
+      await fetchMetrics();
       generator.style.display='block';
     });
 
-    // Submit
-    document.getElementById('submit-btn').addEventListener('click',async ()=>{
-      const prompt = document.getElementById('prompt').value.trim();
-      if(!prompt) return;
-      const metrics = Array.from(metricsContainer.querySelectorAll('input:checked')).map(i=>i.value);
-      overlay.style.display='flex';
-      document.getElementById('response-text').textContent='';
-      document.getElementById('eval-results').innerHTML='';
-      document.getElementById('output').style.display='block';
+    async function fetchMetrics(){
+      metricsContainer.innerHTML='';
       try {
-        const res = await fetch(apiBase+'/v1/llm/generate_with_eval',{
+        const res=await fetch('https://custom-metric-playground.vercel.app/v1/preset_metric/list',{
+          headers:{ 'Authorization':'Basic '+credentials }
+        });
+        const {metrics}=await res.json();
+        Object.keys(metrics).forEach(name=>{
+          const cb=document.createElement('div');
+          cb.innerHTML=`
+            <div class="form-check">
+              <input class="form-check-input" type="checkbox" value="${name}" id="m_${name}">
+              <label class="form-check-label" for="m_${name}">${name}</label>
+            </div>`;
+          metricsContainer.append(cb);
+        });
+      } catch(err){
+        showError('Failed to load metrics');
+      }
+    }
+
+    document.getElementById('submit-btn').addEventListener('click',async()=>{
+      const prompt=prompt.value.trim();
+      const metrics=Array.from(metricsContainer.querySelectorAll('input:checked'))
+                         .map(i=>i.value);
+      if(!prompt||!metrics.length) return;
+      showError('');
+      overlay.style.display='flex';
+      output.style.display='block';
+      responseText.textContent=''; evalResults.innerHTML='';
+      try {
+        const res=await fetch('https://custom-metric-playground.vercel.app/v1/llm/generate_with_eval',{
           method:'POST',
           headers:{
             'Content-Type':'application/json',
             'Authorization':'Basic '+credentials
           },
-          body: JSON.stringify({
+          body:JSON.stringify({
             messages:[{role:'user',content:prompt}],
             model:'sonar-pro',
             eval_config:{enabled:true,metrics,wait_for_results:true}
           })
         });
         if(!res.ok) throw new Error(res.statusText);
-        const data = await res.json();
-        document.getElementById('response-text').textContent = data.response;
-        (data.evaluation?.results||{}).forEach?.()||Object.entries(data.evaluation.results).forEach(([m,r])=>{
+        const data=await res.json();
+        responseText.textContent=data.response;
+        Object.entries(data.evaluation.results).forEach(([m,r])=>{
           const li=document.createElement('li');
           li.innerHTML=`<span class="badge bg-secondary me-2">${m}</span>${JSON.stringify(r)}`;
-          document.getElementById('eval-results').append(li);
+          evalResults.append(li);
         });
       } catch(err){
-        document.getElementById('response-text').textContent='Error: '+err.message;
+        showError('Error: '+err.message);
       } finally {
         overlay.style.display='none';
       }
     });
+
+    function showError(msg){
+      if(!msg) return errorBox.style.display='none';
+      errorBox.textContent=msg;
+      errorBox.style.display='block';
+    }
   </script>
 </body>
 </html>
