--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title class="display-6">LLM Generate &amp; Evaluate</title>
+  <title class="display-4" style="font-family:'Segoe UI',sans-serif;">LLM Generate &amp; Evaluate</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <style>
-    body { transition: background-color .3s, color .3s; }
+    body { transition: background-color .3s, color .3s; font-family:'Segoe UI',sans-serif; }
     .dark { background-color: #121212; color: #e0e0e0; }
     .light { background-color: #f8f9fa; color: #212529; }
     .card { border: none; border-radius: .5rem; }
@@ -23,7 +23,7 @@
     }
     .metric-card:hover { transform: translateY(-4px); }
     .metric-title {
-      font-weight: 600; font-size: 1.1rem; margin-bottom: .5rem;
+      font-weight: 700; font-size: 1.2rem; margin-bottom: .5rem;
     }
     .metric-list { list-style: none; padding: 0; margin: 0; }
     .metric-list li {
@@ -31,10 +31,12 @@
       padding: .25rem 0; border-bottom: 1px solid #3a3a3a;
     }
     .metric-list li:last-child { border-bottom: none; }
+    .toast-container { position: fixed; top: 1rem; right: 1rem; z-index: 1050; }
   </style>
 </head>
 <body class="dark">
   <div class="overlay" id="overlay">Generating…</div>
+  <div class="toast-container" id="toast-container"></div>
   <div class="container py-5">
     <div class="d-flex justify-content-between align-items-center mb-4">
       <h1 class="display-5">LLM Generate &amp; Evaluate</h1>
@@ -86,7 +88,8 @@
           responseText = document.getElementById('response-text'),
           evalResults = document.getElementById('eval-results'),
           output = document.getElementById('output'),
-          metricsContainer = document.getElementById('metrics-container');
+          metricsContainer = document.getElementById('metrics-container'),
+          toastContainer = document.getElementById('toast-container');
 
     let credentials = null;
 
@@ -176,6 +179,11 @@
           col.append(card);
           container.append(col);
         });
+
+        // Notify skipped metrics
+        if (data.evaluation.skipped_metrics?.length) {
+          showToast(`Skipped: ${data.evaluation.skipped_metrics.join(', ')}`);
+        }
       } catch (err) {
         showError('Error: ' + err.message);
       } finally {
@@ -191,6 +199,21 @@
       errorBox.textContent = msg;
       errorBox.style.display = 'block';
       setTimeout(() => { errorBox.style.display = 'none'; }, 5000);
+    }
+
+    function showToast(message) {
+      const toastEl = document.createElement('div');
+      toastEl.className = 'toast align-items-center text-bg-secondary border-0';
+      toastEl.setAttribute('role','alert');
+      toastEl.innerHTML = `
+        <div class="d-flex">
+          <div class="toast-body">${message}</div>
+          <button type="button" class="btn-close btn-close-white me-2 m-auto" data-bs-dismiss="toast"></button>
+        </div>`;
+      toastContainer.append(toastEl);
+      const toast = new bootstrap.Toast(toastEl, { delay: 5000 });
+      toast.show();
+      toastEl.addEventListener('hidden.bs.toast', ()=> toastEl.remove());
     }
   </script>
 </body>
