--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
       </div>
       <div id="output" class="mt-4" style="display:none;">
         <h2 class="h6 text-secondary">Response</h2>
-        <pre id="response-text" class="p-3 bg-light rounded"></pre>
+        <code id="response-text" class="p-3 rounded"></code>
         <h2 class="h6 text-secondary mt-3">Evaluation Results</h2>
         <div id="eval-results" class="row g-3"></div>
       </div>
