--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
     }
 
     .header-actions {
-/*       display: flex; */
+      display: flex;
       gap: 0.75rem;
       grid-column: 3;
       justify-self: end;
@@ -531,7 +531,16 @@
     <header class="header">
       <h1 class="title">PromptLab</h1>
       <p style="text-align: center; color: var(--text-secondary); font-size: 1.1rem; margin-top: 0.5rem; font-weight: 400; grid-column: 2;">AI Performance Testing & Evaluation Platform</p>
-      <div class="header-actions">
+<!--       <div class="header-actions">
+        <button id="theme-btn" class="btn btn-outline">
+          Dark Mode
+        </button>
+        <button id="edit-login" class="btn btn-outline">
+          Change Login
+        </button>
+      </div> -->
+    </header>
+    <div class="header-actions">
         <button id="theme-btn" class="btn btn-outline">
           Dark Mode
         </button>
@@ -539,7 +548,6 @@
           Change Login
         </button>
       </div>
-    </header>
 
     <main class="card">
       <!-- Authentication Form -->
