--- a/index.html
+++ b/index.html
@@ -107,9 +107,9 @@
 
     .header-actions {
       display: flex;
-      gap: 0.75rem;
+      gap: 1rem;
       grid-column: 3;
-      justify-self: end;
+/*       justify-self: end; */
     }
 
     /* Cards */
