--- a/index.html
+++ b/index.html
@@ -107,9 +107,9 @@
 
     .header-actions {
       display: flex;
-      gap: 1rem;
+      gap: 1 rem;
       grid-column: 3;
-/*       justify-self: end; */
+      justify-self: end;
     }
 
     /* Cards */
