--- a/index.html
+++ b/index.html
@@ -541,6 +541,9 @@
       </div> -->
     </header>
     <div class="header-actions">
+      <button class="btn btn-outline">
+        Beta version ! Soon Resgistration will open, we are setting up DB.
+      </button>
         <button id="theme-btn" class="btn btn-outline">
           Dark Mode
         </button>
