--- a/index.html
+++ b/index.html
@@ -542,7 +542,10 @@
     </header>
     <div class="header-actions">
       <button class="btn btn-outline">
-        Beta version ! Soon Resgistration will open, we are setting up DB.
+        0.0.3
+      </button>
+      <button class="btn btn-outline">
+        Beta version ! soon Resgistration will open, we are setting up DB. 
       </button>
         <button id="theme-btn" class="btn btn-outline">
           Dark Mode
