--- a/index.html
+++ b/index.html
@@ -542,7 +542,7 @@
     </header>
     <div class="header-actions">
       <button class="btn btn-outline">
-        0.0.3
+        Build 0.0.3
       </button>
       <button class="btn btn-outline">
         Beta version ! soon Resgistration will open, we are setting up DB. 
