--- a/index.html
+++ b/index.html
@@ -545,7 +545,7 @@
         Build 0.0.3
       </button>
       <button class="btn btn-outline">
-        Beta version ! soon Resgistration will open, we are setting up DB. 
+        This is a Beta Version. We are still setting DB and will soon roll out registrations !
       </button>
         <button id="theme-btn" class="btn btn-outline">
           Dark Mode
