--- a/index.html
+++ b/index.html
@@ -541,10 +541,10 @@
       </div> -->
     </header>
     <div class="header-actions">
-      <button class="btn btn-outline">
+      <button class="btn">
         Build 0.0.3
       </button>
-      <button class="btn btn-outline">
+      <button class="btn">
         Beta Version, we are still setting DB and will soon roll out registrations !
       </button>
         <button id="theme-btn" class="btn btn-outline">
