--- a/index.html
+++ b/index.html
@@ -541,11 +541,8 @@
       </div> -->
     </header>
     <div class="header-actions">
-      <button class="btn">
+      <button class="btn btn-secondary">
         Build 0.0.3
-      </button>
-      <button class="btn">
-        Beta Version, we are still setting DB and will soon roll out registrations !
       </button>
         <button id="theme-btn" class="btn btn-outline">
           Dark Mode
