--- a/index.html
+++ b/index.html
@@ -540,10 +540,7 @@
         </button>
       </div> -->
     </header>
-    <div class="header-actions">
-      <button class="btn btn-secondary">
-        Build 0.0.3
-      </button>
+    <div class="">
         <button id="theme-btn" class="btn btn-outline">
           Dark Mode
         </button>
